# Spark-ETL-Optimization

./: .gitignore  OPTIMIZATION_GUIDE.md  OPTIMIZATION_REVIEW.md  README.md  TAIL_LATENCY_OPTIMIZATIONS.md  analytics_results.txt  analytics_results_deva.txt  analytics_results_improved_v.txt  data_downloader.py  final_analytics.py  final_analytics_deva.py  intermediate_etl_and_analytics.py  intermediate_etl_output.txt  naive_etl.py  naive_etl_and_analytics.py  naive_etl_output.txt  naive_shuffles.txt  op.txt  optimized_etl.py  optimized_etl_and_analytics.py  optimized_etl_coalesce.txt  optimized_etl_filters_eda.txt  optimzed_etl_and_analytics.txt  plot.py  pyproject.toml  run_analytics.sh  run_naive_etl.sh  run_optimized_etl.sh  schema_analyzer.py  schema_analyzer_output.txt
dag/: Naive_ETL - Details for Query 2.html
